# wgpu-rs-test

./: Cargo.toml  README.md  build.rs  index.html
.cargo/: config.toml
shaders/: triangle.frag  triangle.vert
src/: main.rs
